--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@mui/material": "^5.10.17",
     "@mui/styles": "^5.10.16",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
+    "@testing-library/react": "12.1.3",
     "@testing-library/user-event": "^13.2.1",
     "lottie-react": "^2.3.1",
     "react": "^18.2.0",
@@ -27,6 +27,10 @@
     "validator": "^13.7.0",
     "web-vitals": "^2.1.0"
   },
+  "peerDependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
